fix: popover toggle bug, add webkit scrollbar

--- a/docs/src/examples/select-new/select.css
+++ b/docs/src/examples/select-new/select.css
@@ -19,7 +19,7 @@ h1 {
 }
 
 .holder {
-    min-width:  150px;
+    min-width:  160px;
     width:      fit-content;
     margin:     1rem auto;
 
@@ -30,7 +30,7 @@ h1 {
 }
 
 #componentCity3 {
-    min-width: 400px;
+    min-width:  400px;
 }
 
 #componentImg,
